--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,14 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
+      "js": ["typo.js", "contentScript.js"]
     }
   ],
-  "permissions": ["activeTab", "storage", "scripting"]
+  "permissions": ["activeTab", "storage", "scripting"],
+  "web_accessible_resources": [
+    {
+      "resources": ["typo.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
