--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
+  "name": "Spelling Cards",
+  "description": "A Spell Checker for the Web",
   "version": "1.0",
   "action": {
     "default_popup": "popup.html",
