tracks all inputs, fix

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,14 @@
   "name": "Spelling Cards",
   "description": "A Spell Checker for the Web",
   "version": "1.0",
+  "icons": {
+    "16": "pencil.png",
+    "48": "pencil.png",
+    "128": "pencil.png"
+  },
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "hello_extensions.png"
+    "default_icon": "pencil.png"
   },
   "background": {
     "service_worker": "background.js"
