--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["typo.js", "contentScript.js"]
+      "js": ["typo.js", "contentScript.js"],
+      "all_frames": true
     }
   ],
   "permissions": ["activeTab", "storage", "scripting"]
