--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "description": "Track Spelling Errors",
   "version": "0.0.0.1",
   "icons": {
-    "16": "pencil.png",
-    "48": "pencil.png",
-    "128": "pencil.png"
+    "16": "icon/pencil.png",
+    "48": "icon/pencil.png",
+    "128": "icon/pencil.png"
   },
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "pencil.png"
+    "default_popup": "popup/popup.html",
+    "default_icon": "icon/pencil.png"
   },
   "background": {
     "service_worker": "background.js"
