--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,9 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["typo.js", "contentScript.js"],
+      "js": ["contentScript.js"],
       "all_frames": true
     }
   ],
-  "permissions": ["activeTab", "storage", "scripting"]
+  "permissions": ["activeTab", "storage"]
 }
