--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["contentScript.js"],
-      "all_frames": true
+      "all_frames": false
     }
   ],
   "permissions": ["activeTab", "storage"]
